--- a/postfixConfig.html
+++ b/postfixConfig.html
@@ -189,8 +189,8 @@ smtp_tls_CAfile = /etc/ssl/inter_cert.cer<br>
 		If your internet access is via an authenticated proxy then you will need to add your credentials in 2 places:<br>
 		<br>
 		<div class=code>
-			General<br>
-			=======<br>
+			General: sudo nano ~/.bashrc<br>
+			============================<br>
 		proxy_http=username:password@proxy-server-ip:port<br>
 			proxy_https=username:password@proxy-server-ip:port<br>
 			<br>
