--- a/postfixConfig.html
+++ b/postfixConfig.html
@@ -175,14 +175,18 @@ smtp_tls_CAfile = /etc/ssl/inter_cert.cer<br>
 		<br>
 		Depending on how your DMARC record is setup, that may be enough. But what if your DMARC also requires DKIM to pass, or you just want the extra security of DKIM? OpenDKIM has this covered, the steps to install and configure are:<br>
 		<br>
-		<li>Install via bash.</li>
-		<li>Generate private key.</li>
+		<li>Install via bash: apt-get install opendkim opendkim-tools</li>
+		<li>Generate private key: opendkim-genkey -t -s prelay -d domain.com</li>
 		<li>Copy private key to /etc/Postfix</li>
 		<li>Set conf file</li>
-		<li>Set socket</li>
 		<li>Add to main.ch in Postfix</li>
-		<li>Create DKIM record</li>
+		<li>Create DKIM record in DNS</li>
+		<li>Check file permissions on key file: ls -la /etc/postfix/dkim.key</li>
+		<li>Set opendkim as owner of key file: chown opendkim:opendkim /etc/postfix/dkim.key</li>
 		<li>Troubleshoot with logs: journalctl -u opendkim -o short-iso</li>
+		<li>Restart service: service opendkim reload</li>
+		<li>Install DNS tools: sudo apt-get install dnsutils</li>
+		<li>Check DNS record with DIG: dig -t txt prelay._domainkey.oireachtas.ie^C</li>
 		<br>
 		<div class=code>
 		/etc/opendkim.config<br>
@@ -192,7 +196,18 @@ smtp_tls_CAfile = /etc/ssl/inter_cert.cer<br>
 		Selector                relay<br>
 		SOCKET                  inet:8891@localhost<br>
 		</div>
+		* There is some debate if SOCKET should be set under /etc/default/opendkim, but I only have it set under the opendkim.conf file.<br>
 				<br>
+		<br>
+		<div class=code>
+		/etc/postfix/main.cf<br>
+		====================<br>
+		milter_default_action = accept<br>
+		milter_protocol = 6<br>
+		smtpd_milters = inet:localhost:8891<br>
+		non_smtpd_milters = inet:localhost:8891<br>
+		</div>
+		<br>
 		<img src=postfixConfig01.png class=ImageMain>
 		<div class=ImageCaption>↑ Usually there are three lines of text in double quotes, remove the line breaks and quotes before adding the DNS TXT record. The t=y is for testing and can be removed.</div>
         <br>
