--- a/postfixConfig.html
+++ b/postfixConfig.html
@@ -225,7 +225,7 @@ smtp_tls_CAfile = /etc/ssl/inter_cert.cer<br>
 		proxy_http=username:password@proxy-server-ip:port<br>
 			proxy_https=username:password@proxy-server-ip:port<br>
 			<br>
-			Proxy for APT /etc/apt/apt.conf<br>
+			Proxy for APT: /etc/apt/apt.conf<br>
 			===============================<br>
 			Acquire::http::Proxy "http://[username]:[password]@ [proxy-web-or-IP-address]:[port-number]";<br>
 			Acquire::https::Proxy "http://[username]:[password]@ [proxy-web-or-IP-address]:[port-number]";<br>
