--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	  </details>
 	  <details>
 
-    <summary><b>2023</b><br></summary>
+    <summary><b>2023 (23)</b><br></summary>
 <a href="mapSharedMailbox.html" class=two>Cannot map new Shared Mailboxes in O365</a><br>
 	<a href="exchangeCertRenew.html" class=two>Renewing an Exchange 2016 certificate</a><br>
 	<a href="compliancePowershell.html" class=two>Connect to Compliance PowerShell behind a Proxy</a><br>
