--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	  </details>
 	  <details>
 
-    <summary><b>2023 (23)</b><br></summary>
+    <summary><b>2023</b><br></summary>
 <a href="mapSharedMailbox.html" class=two>Cannot map new Shared Mailboxes in O365</a><br>
 	<a href="exchangeCertRenew.html" class=two>Renewing an Exchange 2016 certificate</a><br>
 	<a href="compliancePowershell.html" class=two>Connect to Compliance PowerShell behind a Proxy</a><br>
@@ -157,7 +157,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	<tr><td><a href="runbooks.html" class=two>Creating a Teams report uploading to SharePoint with Runbooks</a><br></td><td>31-Jan-24</td></tr>
 	<tr><td><a href="teamsApplication.html" class=two>Teams PowerShell module can't run CS cmd as App</a></td><td>19-Jan-24</td></tr>
 		      
-	 <tr><td> <br><b>2023</b></td><td></td></tr>
+	 <tr><td> <br><b>2023 (23)</b></td><td></td></tr>
 	<tr><td><a href="mapSharedMailbox.html" class=two>Cannot map new Shared Mailboxes in O365</a></td><td>06-Dec-23</td></tr>
 	<tr><td><a href="missingMailbox.html" class=two>Mailbox present in O365 but missing on-prem</a></td><td>13-Nov-23</td></tr>
 	<tr><td><a href="recreatePublicFolder.html" class=two>Recreating Public Folders in Exchange Online</a></td><td>11-Oct-23</td></tr>
