--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
               
     <style>  
       body{
@@ -53,7 +54,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	.datestamp { font-family:verdana; font-size:10px; color:#564c4d; width:850px; text-align:left; }
 	.imagecaption { font-style: italic; }
 	.imageMain { border: 5px solid #564c4d; }
-	.indexTable td { font-family:verdana; font-size:14px; ; color:#564c4d; }
+	.indexTable td {  font-family: "Space Mono", monospace; font-size:14px; ; color:#564c4d; }
 
 
 	    @media screen and (max-width: 700px) {
@@ -63,6 +64,12 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	.indexTable td { font-family:verdana; font-size:24px; ; color:#564c4d; }	
 	.content { font-family:verdana; font-size:26px; ; color:#564c4d; width:850px; text-align:left; }
 	.headline { font-family:verdana; font-size:35px; color:#564c4d; width:850px; text-align:left; }
+}
+
+	    .space-mono-regular {
+  font-family: "Space Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
 }
       </style>
     
