--- a/index.html
+++ b/index.html
@@ -54,14 +54,18 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	.datestamp { font-family:verdana; font-size:10px; color:#564c4d; width:850px; text-align:left; }
 	.imagecaption { font-style: italic; }
 	.imageMain { border: 5px solid #564c4d; }
-	.indexTable td {  font-family: "Space Mono", monospace; font-size:14px; ; color:#564c4d; }
+	.indexTable td {  font-family: "Verdana", monospace; font-size:14px; ; color:#564c4d; }
+	.indexTable table table td + td{ font-family: "Space Mono", monospace; }
 
+background: red
+
+}
 
 	    @media screen and (max-width: 700px) {
   body {
     font-size:20px;
   }    
-	.indexTable td { font-family:verdana; font-size:24px; ; color:#564c4d; }	
+	
 	.content { font-family:verdana; font-size:26px; ; color:#564c4d; width:850px; text-align:left; }
 	.headline { font-family:verdana; font-size:35px; color:#564c4d; width:850px; text-align:left; }
 }
