--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	.imagecaption { font-style: italic; }
 	.imageMain { border: 5px solid #564c4d; }
 	.indexTable td {  font-family: "Verdana", monospace; font-size:14px; ; color:#564c4d; }
-	.indexTable table table td + td{ font-family: "Space Mono", monospace; }
+	.indexTable table td + td { font-family: "Space Mono", monospace; }
 
 background: red
 
