--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
               
     <style>   
       body{
@@ -54,8 +55,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	.datestamp { font-family:verdana; font-size:10px; color:#564c4d; width:850px; text-align:left; }
 	.imagecaption { font-style: italic; }
 	.imageMain { border: 5px solid #564c4d; }
-	.indexTable td {  font-family: "Verdana", monospace; font-size:14px; ; color:#564c4d; }
-	.indexTable table td + td { font-family: "Space Mono", monospace; }
+	.indexTable td {  font-family: "Roboto Mono", monospace; font-size:14px; ; color:#564c4d; }
 
 background: red
 
