--- a/setLocale.html
+++ b/setLocale.html
@@ -80,12 +80,32 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	<div class="dropdown">
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
-		  <b>2024</b><br>
+		  <details open>
+		    <summary><b>2024</b><br></summary>
+	<a href="postfixConfig.html" class=two>Advanced Postfix configuration</a><br>
+	  <a href="installExchange2019.html" class=two>Installing Exchange 2019 in Azure Landing Zone</a><br>
+	  <a href="upgradePHP.html" class=two>Upgrading PHP on Windows</a><br>
+	  <a href="postfixRelay.html" class=two>Adding a Postfix server for relay to O365</a><br>
+	  <a href="integratedApps.html" class=two>O365 Integrated Apps troubleshooting</a><br>
+	  <a href="DominoO365.html" class=two>Domino and O365 Co-existence</a><br>
+	  <a href="ADdelegate.html" class=two>Delegate Control in AD</a><br>
+	  <a href="hverelay.html" class=two>App mail relay via HVE</a><br>
+ <a href="hve.html" class=two>Setting up Mail Relay with HVE</a><br>
+    <a href="bimi.html" class=two>Getting BIMI certified</a><br>
+    <a href="occam.html" class=two>Orbea Occam SL H30</a><br>
+    <a href="freesat.html" class=two>Installing FreeSat and Saorview</a><br>
+    <a href="broadband.html" class=two>Changing broadband provider</a><br>
+    <a href="DINtimer.html" class=two>Replacing a DIN timer on fuseboard</a><br>
+    <a href="desktopNotifications.html" class=two>Outlook Desktop Notifications stop working</a><br>
     <a href="outlookFolders.html" class=two>Outlook folders keep moving sort order</a><br>
     <a href="runbooks.html" class=two>Teams report uploading to SharePoint with Runbooks</a><br>
 	  <a href="teamsApplication.html" class=two>Teams PowerShell module can't run CS cmd as App</a><br>
-	  <b>2023</b><br>
-  <a href="mapSharedMailbox.html" class=two>Cannot map new Shared Mailboxes in O365</a><br>
+	  </details>
+	  
+	  <details>
+
+    <summary><b>2023</b><br></summary>
+<a href="mapSharedMailbox.html" class=two>Cannot map new Shared Mailboxes in O365</a><br>
 	<a href="exchangeCertRenew.html" class=two>Renewing an Exchange 2016 certificate</a><br>
 	<a href="compliancePowershell.html" class=two>Connect to Compliance PowerShell behind a Proxy</a><br>
 	<a href="sensitivityLabelError.html" class=two>Sensitivity Label not shown in Outlook Client</a><br>
@@ -106,7 +126,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
         <a href="graphMail.html" class=two>Using Graph to send emails with inline images</a><br>
         <a href="charts.html" class=two>Visualizing Graph data with Google Charts</a><br>
         <a href="alwaysOn.html" class=two>Keeping a log of NetScaler AlwaysON connections</a><br>
-        <a href="DNScleanup.html" class=two>Cleaning up your Windows DNS server</a><br>
+</details>
   </div>
 </div>	
 		
