--- a/links.html
+++ b/links.html
@@ -127,7 +127,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
         A collection of various links.<br><br>
            <table>
 		<tr><td><td style='white-space:nowrap; font-size 12px;' class=tableContent><a href='https://tech.nicolonsky.ch/'>nicolonsky tech</a></td><td style='font-size 12px;align:left;' class=tableContent>Great articles on Graph and securing Azure AD environments.</td></tr>
-		<tr><td><td style='white-space:nowrap; font-size 12px;' class=tableContent><a href='https://https://www.michev.info/'>Michev Blog</a></td><td style='font-size 12px;align:left;' class=tableContent>Usually has articles on newly released features from Microsoft.</td></tr>
+		<tr><td><td style='white-space:nowrap; font-size 12px;' class=tableContent><a href='https://www.michev.info/'>Michev Blog</a></td><td style='font-size 12px;align:left;' class=tableContent>Usually has articles on newly released features from Microsoft.</td></tr>
 		<tr><td><td style='white-space:nowrap; font-size 12px;' class=tableContent><a href='https://blog.terenceluk.com/'>Terence Luk</a></td><td style='font-size 12px;align:left;' class=tableContent>Good insights into Exchange and NetScaler, also has articles on Teams.</td></tr>
 		<tr><td><td style='white-space:nowrap; font-size 12px;' class=tableContent><a href='https://blog.joeware.net/'>Joeware</a></td><td style='font-size 12px;' class=tableContent>Insights into AD.</td></tr>
 		<tr><td><td style='white-space:nowrap; font-size 12px;' class=tableContent><a href='https://mikecrowley.us/'>Mike Crowley MVP</a></td><td style='font-size 12px;' class=tableContent>PowerShell scripts for Azure and O365.</td></tr>
