--- a/postfixConfig.html
+++ b/postfixConfig.html
@@ -264,7 +264,7 @@ smtp_tls_CAfile = /etc/ssl/inter_cert.cer<br>
 		<div class=code>
 		/var/logs/postfix.log<br>
 		=====================<br>
-		TBC<br>
+		improper command pipelining after CONNECT from myserver.domain.local<br>
 
 		</div>
 		<br>
