--- a/postfixConfig.html
+++ b/postfixConfig.html
@@ -278,7 +278,7 @@ smtp_tls_CAfile = /etc/ssl/inter_cert.cer<br>
 		<br>
 		But in my case, I didn't want to reduce the security of Postfix, and as the server will be retired in a few months, I decided to install <a href='https://learn.microsoft.com/en-us/biztalk/install-and-config-guides/appendix-d-create-the-smtp-server'>SMTP Server</a> on IIS.<br>
 		<br>
-		It's no longer officially supported by Microsoft, but it is easy to configure. Probably a little worrying that there is no protection against SMTP Smuggling, but it will only be used internally.<br>
+		It's no longer officially supported by Microsoft, but it is easy to configure. Probably a little worrying that there is no protection against SMTP Smuggling, though it will only be used internally.<br>
 		<br>
           </div>
           
