--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	.imagecaption { font-style: italic; }
 	.imageMain { border: 5px solid #564c4d; }
 	.indexTable td {  font-family: "Roboto Mono", monospace; font-size:14px; ; color:#564c4d; }
-
+	.code { font-family: 'Source Code Pro', monospace; font-size:12px; color:#000; border: 2px solid #000; background-color:#cecece; padding:6px; }
+	    
 background: red
 
 }
