--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ background: red
 
 	    @media screen and (max-width: 700px) {
   body {
-    font-size:20px;
+   .indexTable td {  font-family: "Roboto Mono", monospace; font-size:18px; ; color:#564c4d; }
   }    
 	
 }
