--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
   <div class="dropdown-content" style='line-height: 1.6;'>
 	  <details open>
 		    <summary><b>2024</b><br></summary>
+		  <a href="postfixRouting.html" class=two>Postfix routing by filtering</a><br>
 	<a href="postfixConfig.html" class=two>Advanced Postfix configuration</a><br>
 	  <a href="installExchange2019.html" class=two>Installing Exchange 2019 in Azure Landing Zone</a><br>
 	  <a href="upgradePHP.html" class=two>Upgrading PHP on Windows</a><br>
@@ -132,6 +133,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      <table class=indexTable> 
 		      <br>
 		     <tr><td> <br><b>2024</b></td><td></td></tr>
+	<tr><td><a href="postfixRouting.html" class=two>Postfix routing by filtering</a><br></td><td>24-Jun-24</td></tr>
 	<tr><td><a href="postfixConfig.html" class=two>Advanced Postfix configuration</a><br></td><td>17-Jun-24</td></tr>
 	<tr><td><a href="installExchange2019.html" class=two>Installing Exchange 2019 in Azure Landing Zone</a><br></td><td>15-Jun-24</td></tr>
 	<tr><td><a href="upgradePHP.html" class=two>Upgrading PHP on Windows</a><br></td><td>10-Jun-24</td></tr>
