--- a/postfixRouting.html
+++ b/postfixRouting.html
@@ -186,7 +186,7 @@ smtp_sasl_auth_enable = yes <i># this won't affect your smart-host config</i><br
       In the logs we can see that the relay works straight away:<br>
           <br>
 	<div class=code>
-          Jun 24 14:37:39 relay postfix/smtp[54490]: 19CxxxD: to=< sales@domain.com >, <b></b>relay=smtp-hve.office365.com[172.211.197.77]:587</b>, delay=1.9, delays=0.1/0/1.3/0.45, dsn=2.6.0, status=sent (250 2.6.0 < 36xxx45.x04.1719xxx050.JavaMail.vmuser@server.domain.local > Queued mail for delivery)<br>
+          Jun 24 14:37:39 relay postfix/smtp[54490]: 19CxxxD: to=&#60;sales@domain.com&#62;, <b>relay=smtp-hve.office365.com[172.211.197.77]:587</b>, delay=1.9, delays=0.1/0/1.3/0.45, dsn=2.6.0, status=sent (250 2.6.0 < 36xxx45.x04.1719xxx050.JavaMail.vmuser@server.domain.local > Queued mail for delivery)<br>
 	  </div>
 		  <br>
           One thing to keep in mind is the 'from' address has to match the HVE account. So if you have an app that limits what address you can use you might want to look at Postfix's address rewrite.<br>
